--- a/portfolio/app/templates/app/index.html
+++ b/portfolio/app/templates/app/index.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
     <!-- Header -->
     <div class="container-fluid">
         <div class="container" style="background-color: whitesmoke;">
@@ -20,10 +19,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav">
-                            <a href="#" class="nav-item nav-link active">Home</a>
-                            <a href="#" class="nav-item nav-link">Profile</a>
-                            <a href="#" class="nav-item nav-link">Messages</a>
-                            <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
+                            <a href="#" class="nav-item nav-link active">Acceuil</a>
+                            <a href="#" class="nav-item nav-link">Expériences</a>
+                            <a href="#" class="nav-item nav-link active">Formations</a>
+                            <a href="#" class="nav-item nav-link">Compétences</a>
+                            <a href="#" class="nav-item nav-link active">Centre d'intérêt</a>
                         </div>
                         <div class="navbar-nav ms-auto">
                             <a href="#" class="nav-item nav-link">Télécharger le CV</a>
