--- a/portfolio/app/templates/app/index.html
+++ b/portfolio/app/templates/app/index.html
@@ -10,10 +10,10 @@
 <body>
     <!-- Header -->
     <div class="container-fluid">
-        <div class="container" style="background-color: whitesmoke;">
+        <div class="container">
             <h1 style="font-size: large; padding: 0px 0px; font-family: 'Courier New', Courier, monospace;"><b>MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Python & DevOps</span></b></h1>
             <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container-fluid">
+                <div class="container-fluid" style="padding: 0;">
                     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -21,9 +21,9 @@
                         <div class="navbar-nav">
                             <a href="#" class="nav-item nav-link active">Acceuil</a>
                             <a href="#" class="nav-item nav-link">Expériences</a>
-                            <a href="#" class="nav-item nav-link active">Formations</a>
+                            <a href="#" class="nav-item nav-link">Formations</a>
                             <a href="#" class="nav-item nav-link">Compétences</a>
-                            <a href="#" class="nav-item nav-link active">Centre d'intérêt</a>
+                            <a href="#" class="nav-item nav-link">Centre d'intérêt</a>
                         </div>
                         <div class="navbar-nav ms-auto">
                             <a href="#" class="nav-item nav-link">Télécharger le CV</a>
@@ -34,6 +34,94 @@
         </div>
     </div>
     <!-- End Header -->
+
+
+    <!-- Main -->
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="../app/../../static/img/app/photo.jpg" width="100%">
+                    <div class="container">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur dolor cum repellat illum quae, saepe maiores quaerat quidem magni, repellendus quibusdam nobis. In magni fuga incidunt excepturi porro reprehenderit laudantium!
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h2 style="font-size:x-large;">Expériences</h2>
+                    <div class="container bg-light">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit a excepturi eaque dolores impedit laboriosam, perspiciatis harum provident ullam dolorem quisquam officiis doloremque fugit repellat mollitia unde hic, recusandae animi?
+                    </div>
+                   </div>
+                <div class="col-md-3">
+                    <h2 style="font-size:x-large;">Compétences</h2>
+                    <div class="">
+                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Python</p>
+                        <div class="col-md-8">
+                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="">
+                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Django & Flask</p>
+                        <div class="col-md-8">
+                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="">
+                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Django rest framework</p>
+                        <div class="col-md-8">
+                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="">
+                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">SQL (MySQL, PostgreSQL)</p>
+                        <div class="col-md-8">
+                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="">
+                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Docker, DockerHub</p>
+                        <div class="col-md-8">
+                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="">
+                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Circle, Gitlab</p>
+                        <div class="col-md-8">
+                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="">
+                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Heroku, AWS</p>
+                        <div class="col-md-8">
+                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="">
+                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Javascript, Bootstrap, CSS, HTML</p>
+                        <div class="col-md-8">
+                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
