--- a/portfolio/app/templates/app/index.html
+++ b/portfolio/app/templates/app/index.html
@@ -49,9 +49,15 @@
                 <div class="col-md-6">
                     <h2 style="font-size:x-large;">Expériences</h2>
                     <div class="container bg-light">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit a excepturi eaque dolores impedit laboriosam, perspiciatis harum provident ullam dolorem quisquam officiis doloremque fugit repellat mollitia unde hic, recusandae animi?
+                        <h3>Orange County Lettings</h3>
+                        <span>Projet Openclassrooms</span>
+                        <p>Orange County Lettings est une start-up dans le secteur de la location de biens immobiliers. La start-up est en pleine phase d’expansion aux États-Unis.</p>
+                        <ul>
+                            <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
+                            <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
+                        </ul>
                     </div>
-                   </div>
+                </div>
                 <div class="col-md-3">
                     <h2 style="font-size:x-large;">Compétences</h2>
                     <div class="">
@@ -122,8 +128,5 @@
             </div>
         </div>
     </div>
-
-
-
 </body>
 </html>
