--- a/portfolio/app/templates/app/index.html
+++ b/portfolio/app/templates/app/index.html
@@ -40,24 +40,31 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
+                <!-- Left col -->
                 <div class="col-md-3">
                     <img src="../app/../../static/img/app/photo.jpg" width="100%">
                     <div class="container">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur dolor cum repellat illum quae, saepe maiores quaerat quidem magni, repellendus quibusdam nobis. In magni fuga incidunt excepturi porro reprehenderit laudantium!
                     </div>
                 </div>
+                <!-- Center col -->
                 <div class="col-md-6">
                     <h2 style="font-size:x-large;">Expériences</h2>
-                    <div class="container bg-light">
-                        <h3>Orange County Lettings</h3>
-                        <span>Projet Openclassrooms</span>
-                        <p>Orange County Lettings est une start-up dans le secteur de la location de biens immobiliers. La start-up est en pleine phase d’expansion aux États-Unis.</p>
-                        <ul>
+                    <div class="container bg-light" style="font-size: 11px;">
+                        <h3 style="font-size:large; color: #ff9c00;">Orange County Lettings</h3>
+                        <b>Projet Openclassrooms Mai 2022</b>
+                        <p>Contexte : Orange County Lettings est une start-up dans le secteur de la location de biens immobiliers. La start-up est en pleine phase d’expansion aux États-Unis.<br>
+                        <span>Mes tâches</span></p>
+                        <ul style="margin-top: -2%;">
+                            <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
                             <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
-                            <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
+                            <li>Refactoriser une application pour réduire la dette technique</li>
+                            <li>Appliquez une architecture modulaire dans une application Python</li>
+                            <li>Déployer une application en utilisant Heroku</li>
                         </ul>
                     </div>
                 </div>
+                <!-- Right col-->
                 <div class="col-md-3">
                     <h2 style="font-size:x-large;">Compétences</h2>
                     <div class="">
