--- a/portfolio/app/templates/app/index.html
+++ b/portfolio/app/templates/app/index.html
@@ -26,7 +26,7 @@
                             <a href="#" class="nav-item nav-link">Centre d'intérêt</a>
                         </div>
                         <div class="navbar-nav ms-auto">
-                            <a href="#" class="nav-item nav-link">Télécharger le CV</a>
+                            <a href="#" class="nav-item nav-link">Blog</a>
                         </div>
                     </div>
                 </div>
@@ -43,8 +43,9 @@
                 <!-- Left col -->
                 <div class="col-md-3">
                     <img src="../app/../../static/img/app/photo.jpg" width="100%">
-                    <div class="container">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur dolor cum repellat illum quae, saepe maiores quaerat quidem magni, repellendus quibusdam nobis. In magni fuga incidunt excepturi porro reprehenderit laudantium!
+                    <div class="container-fluid">
+                        <h3 style="font-size:larger;">À propos de moi</h3>
+                        <p style="font-size: smaller;">J'ai 23 ans Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium corporis praesentium quia aliquid debitis magnam ullam quis necessitatibus tempora blanditiis et quos reprehenderit, ab aut quaerat sequi illum voluptas est.</p> 
                     </div>
                 </div>
                 <!-- Center col -->
@@ -63,73 +64,69 @@
                             <li>Déployer une application en utilisant Heroku</li>
                         </ul>
                     </div>
+                    <div class="container bg-light" style="font-size: 11px;">
+                        <h3 style="font-size:large; color: #ff9c00;">Orange County Lettings</h3>
+                        <b>Projet Openclassrooms Mai 2022</b>
+                        <p>Contexte : Orange County Lettings est une start-up dans le secteur de la location de biens immobiliers. La start-up est en pleine phase d’expansion aux États-Unis.<br>
+                        <span>Mes tâches</span></p>
+                        <ul style="margin-top: -2%;">
+                            <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
+                            <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
+                            <li>Refactoriser une application pour réduire la dette technique</li>
+                            <li>Appliquez une architecture modulaire dans une application Python</li>
+                            <li>Déployer une application en utilisant Heroku</li>
+                        </ul>
+                    </div>
+                    <h2 style="font-size:x-large;">Formations</h2>
+                    <div class="container bg-light" style="font-size: 11px;">
+                        <h3 style="font-size:large; color: #ff9c00;">Openclassrooms (OC)</h3>
+                        <b>Paris - 2020 à 2022</b>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
+                    </div>
+                    <div class="container bg-light" style="font-size: 11px;">
+                        <h3 style="font-size:large; color: #ff9c00;">Licence Science pour l'Ingénieur (SPI)</h3>
+                        <b>Paris Saclay - 2017 à 2020</b>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
+                    </div>
+                    <div class="container bg-light" style="font-size: 11px;">
+                        <h3 style="font-size:large; color: #ff9c00;">Bac Scientifique (S)</h3>
+                        <b>Lycée Maurice Eliot - 2014 à 2017</b>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
+                    </div>
                 </div>
                 <!-- Right col-->
                 <div class="col-md-3">
                     <h2 style="font-size:x-large;">Compétences</h2>
-                    <div class="">
+                    <div style="margin-bottom: 30px;">
                         <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Python</p>
-                        <div class="col-md-8">
-                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
-                                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
+                        <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                            <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-                    <div class="">
-                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Django & Flask</p>
-                        <div class="col-md-8">
-                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
-                                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
+                    <div style="margin-bottom: 30px;">
+                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Python</p>
+                        <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                            <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-                    <div class="">
-                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Django rest framework</p>
-                        <div class="col-md-8">
-                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
-                                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
+                    <div style="margin-bottom: 30px;">
+                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Python</p>
+                        <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
+                            <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-                    <div class="">
-                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">SQL (MySQL, PostgreSQL)</p>
-                        <div class="col-md-8">
-                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
-                                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                        </div>
+                    <h2 style="font-size:x-large;">Centre d'intérêt</h2>
+                    <div>
+                        <span style="font-size: medium; color: #ff9c00;">Football</span>
+                        <p style="font-size:x-small; margin-left: 3px">Pratique du football en loisir et supporteur de l'Olympique Lyonnais</p>
                     </div>
-                    <div class="">
-                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Docker, DockerHub</p>
-                        <div class="col-md-8">
-                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
-                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                        </div>
+                    <div>
+                        <span style="font-size: medium; color: #ff9c00;">Lecture</span>
+                        <p style="font-size:x-small; margin-left: 3px">Développement personnel, Histoire, Aventure, Fantaisie</p>
                     </div>
-                    <div class="">
-                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Circle, Gitlab</p>
-                        <div class="col-md-8">
-                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
-                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                        </div>
-                    </div>
-                    <div class="">
-                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Heroku, AWS</p>
-                        <div class="col-md-8">
-                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
-                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                        </div>
-                    </div>
-                    <div class="">
-                        <p style="font-size:x-small; margin-left: 3px; margin-top: 3px;">Javascript, Bootstrap, CSS, HTML</p>
-                        <div class="col-md-8">
-                            <div class="progress" style="height: 9px; width: 215px; margin-top: -10px;">
-                                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                        </div>
+                    <div>
+                        <span style="font-size: medium; color: #ff9c00;">Blockchain</span>
+                        <p style="font-size:x-small; margin-left: 3px">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, verit</p>
                     </div>
                 </div>
             </div>
