--- a/portfolio/app/templates/app/index.html
+++ b/portfolio/app/templates/app/index.html
@@ -153,19 +153,21 @@
                         <p style="font-size:x-small; margin-left: 3px">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, verit</p>
                     </div>
                     <h2 style="font-size:x-large;">Les derniers articles</h2>
-                    <ul style="margin-left:-10%;">
-                        <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                        <hr>
-                        <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                        <hr>
-                        <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                        <hr>
-                        <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                        <hr>
-                        <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                        <hr>
-                        <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                    </ul>
+                    <div>
+                        <ul style="margin-left:-7%;">
+                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
+                            <hr>
+                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
+                            <hr>
+                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
+                            <hr>
+                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
+                            <hr>
+                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
+                            <hr>
+                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -294,8 +296,7 @@
   
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      Copyright © 2022 MAVA MALONGA Alpha - <a href="#">Mentions légales</a> - <a href="#">Plan du site</a>
     </div>
     <!-- Copyright -->
   </footer>
