--- a/portfolio/app/templates/app/blog.html
+++ b/portfolio/app/templates/app/blog.html
@@ -39,42 +39,11 @@
             <div class="row">
                 <!-- Left col -->
                 <div class="col-md-9">
-                    <div>
-                        <div class="row">
-                          <div class="col-sm-4">
-                            <a href="{% url 'blog' blog_id=1 %}" sty>
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                            </a>
-                        </div>
-                          <div class="col-sm-4">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                          </div>
-                          <div class="col-sm-4">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                          </div>
-                          <div class="col-sm-4">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                          </div>
-                          <div class="col-sm-4">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                          </div>
-                          <div class="col-sm-4">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                          </div>
-                        </div>
-                      </div>
+                    <div class="container">
+                        <img src="../../static/img/article.jpg" width="100%">
+                        <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
+                        <p width="100%">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus possimus consectetur consequatur sunt, nemo dolores inventore fuga nihil tempore, ad est dolorem in molestiae animi tenetur atque incidunt aut itaque! Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    </div>
                 </div>
                 <!-- Right col-->
                 <div class="col-md-3">
