--- a/portfolio/app/templates/app/blog.html
+++ b/portfolio/app/templates/app/blog.html
@@ -73,6 +73,16 @@
                             <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
                         </ul>
                     </div>
+                    <h2 style="font-size:x-large;">Sommaire</h2>
+                    <div class="container">
+                        <ul>
+                            <li>Astuces</li>
+                            <li>Développement</li>
+                            <li>Événements</li>
+                            <li>Blockchain</li>
+                            <li>Divers</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
