--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -6,15 +6,19 @@
     <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        
+    </style>
 </head>
 <body>
     <!-- Header -->
     <div class="container-fluid">
         <div class="container">
-            <h1 style="font-size: large; padding: 0px 0px; font-family: 'Courier New', Courier, monospace;"><b>MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Python & DevOps</span></b></h1>
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <h1 style="font-size: large; font-family: 'Courier New', Courier, monospace; margin-top: 10px;"><b>MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Python & DevOps</span></b></h1>
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(0, 0, 0, 0.05);; margin-bottom: 10px; height: 30px;">
                 <div class="container-fluid" style="padding: 0;">
-                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                    style="width: 20%; height: 20%; margin-top: -8px; padding: 0px; border-width: 0px;">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
