--- a/portfolio/vitrine/templates/vitrine/index.html
+++ b/portfolio/vitrine/templates/vitrine/index.html
@@ -1,45 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
-    <!-- Header -->
-    <div class="container-fluid">
-        <div class="container">
-            <h1 style="font-size: large; padding: 0px 0px; font-family: 'Courier New', Courier, monospace;"><b>MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Python & DevOps</span></b></h1>
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container-fluid" style="padding: 0;">
-                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <div class="navbar-nav">
-                            <a href="{% url 'index' %}" class="nav-item nav-link active">Acceuil</a>
-                            <a href="{% url 'blogs' %}" class="nav-item nav-link">Blog</a>
-                        </div>
-                        <div class="navbar-nav ms-auto">
-                            <a href="{% url 'blogs' %}" class="nav-item nav-link">Télécharger mon CV</a>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </div>
-    <!-- End Header -->
-
-
+{% extends 'base.html' %}
+{% block content %}
     <!-- Main -->
     <div class="container-fluid">
         <div class="container">
             <div class="row">
                 <!-- Left col -->
                 <div class="col-md-3">
-                    <img src="../app/../../static/img/app/me.jpg" width="100%">
+                    <img src="../app/../../static/img/vitrine/me.jpg" width="100%">
                     <div>
                         <h3 style="font-size:larger;">À propos de moi</h3>
                         <p style="font-size: smaller;">J'ai 23 ans Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium corporis praesentium quia aliquid debitis magnam ullam quis necessitatibus tempora blanditiis et quos reprehenderit, ab aut quaerat sequi illum voluptas est.</p> 
@@ -187,19 +154,4 @@
             </div>
         </div>
     </div>
-
-
-
-
-<!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
-  
-    <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      Copyright © 2022 MAVA MALONGA Alpha - <a href="#">Mentions légales</a> - <a href="#">Plan du site</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-  <!-- Footer -->
-</body>
-</html>
+{% endblock %}
