--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <style>
-        
+   
     </style>
 </head>
 <body>
@@ -23,11 +23,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav">
-                            <a href="{% url 'index' %}" class="nav-item nav-link active">Acceuil</a>
-                            <a href="{% url 'blogs' %}" class="nav-item nav-link">Blog</a>
+                            <a href="{% url 'index' %}" class="nav-item nav-link active" style="font-weight:bold;">Acceuil</a>
+                            <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Blog</a>
                         </div>
                         <div class="navbar-nav ms-auto">
-                            <a href="{% url 'blogs' %}" class="nav-item nav-link">Télécharger mon CV</a>
+                            <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Télécharger mon CV</a>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-light text-muted">
         <!-- Copyright -->
-        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05); font-size: large; font-family: 'Courier New', Courier, monospace; margin-top: 10px;">
         Copyright © 2022 MAVA MALONGA Alpha - <a href="#">Mentions légales</a> - <a href="#">Plan du site</a>
         </div>
         <!-- Copyright -->
