--- a/portfolio/vitrine/templates/vitrine/index.html
+++ b/portfolio/vitrine/templates/vitrine/index.html
@@ -44,7 +44,7 @@
                         <b>Projet Openclassrooms Mai 2022</b>
                         <p>Contexte : Orange County Lettings est une start-up dans le secteur de la location de biens immobiliers. La start-up est en pleine phase d’expansion aux États-Unis.<br>
                         <span>Mes tâches</span></p>
-                        <ul style="margin-top: -2%;">
+                        <ul style="margin-top: -2%; padding-bottom: 10px;">
                             <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
                             <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
                             <li>Refactoriser une application pour réduire la dette technique</li>
@@ -57,7 +57,7 @@
                         <b>Projet Openclassrooms Mai 2022</b>
                         <p>Contexte : Orange County Lettings est une start-up dans le secteur de la location de biens immobiliers. La start-up est en pleine phase d’expansion aux États-Unis.<br>
                         <span>Mes tâches</span></p>
-                        <ul style="margin-top: -2%;">
+                        <ul style="margin-top: -2%; padding-bottom: 10px;">
                             <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
                             <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
                             <li>Refactoriser une application pour réduire la dette technique</li>
@@ -69,17 +69,17 @@
                     <div class="container bg-light" style="font-size: 11px;">
                         <h3 style="font-size:large; color: #ff9c00;">Openclassrooms - Développeur d'application Python</h3>
                         <b>Paris - 2020 à 2022</b>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
+                        <p style="padding-bottom: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
                     </div>
                     <div class="container bg-light" style="font-size: 11px;">
                         <h3 style="font-size:large; color: #ff9c00;">Licence Science pour l'Ingénieur (SPI)</h3>
                         <b>Paris Saclay - 2017 à 2020</b>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
+                        <p style="padding-bottom: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
                     </div>
                     <div class="container bg-light" style="font-size: 11px;">
                         <h3 style="font-size:large; color: #ff9c00;">Bac Scientifique (S)</h3>
                         <b>Lycée Maurice Eliot - 2014 à 2017</b>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
+                        <p style="padding-bottom: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
                     </div>
                 </div>
                 <!-- Right col-->
@@ -136,19 +136,17 @@
                     </div>
                     <h2 style="font-size:x-large;">Les derniers articles</h2>
                     <div>
-                        <ul style="margin-left:-7%;">
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                            <hr>
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                            <hr>
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                            <hr>
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                            <hr>
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                            <hr>
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                        </ul>
+                        <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                        <hr>
+                        <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                        <hr>
+                        <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                        <hr>
+                        <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                        <hr>
+                        <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                        <hr>
+                        <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
                     </div>
                 </div>
             </div>
