--- a/portfolio/blog/templates/blog/blogs.html
+++ b/portfolio/blog/templates/blog/blogs.html
@@ -9,36 +9,46 @@
                     <div>
                         <div class="row">
                           <div class="col-sm-4">
-                            <a href="{% url 'blog' blog_id=1 %}" sty>
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
                             <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
+                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
                             </a>
-                        </div>
-                          <div class="col-sm-4">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
                           </div>
                           <div class="col-sm-4">
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
                             <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
+                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            </a>
                           </div>
                           <div class="col-sm-4">
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
                             <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
+                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            </a>
                           </div>
                           <div class="col-sm-4">
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
                             <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
+                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            </a>
                           </div>
                           <div class="col-sm-4">
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
                             <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium;">FIRMWARE FRANÇAIS POUR LE XIAOMI MI BAND 3</h3>
-                            <p width="100%">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
+                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            </a>
+                          </div>
+                          <div class="col-sm-4">
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
+                            <img src="../../static/img/article.jpg" width="100%">
+                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
+                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            </a>
                           </div>
                         </div>
                       </div>
