--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -44,7 +44,7 @@
     <footer class="text-center text-lg-start bg-light text-muted">
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05); font-size: large; font-family: 'Courier New', Courier, monospace; margin-top: 10px;">
-        Copyright © 2022 MAVA MALONGA Alpha - <a href="#">Mentions légales</a> - <a href="#">Plan du site</a>
+        Copyright © 2022 MAVA MALONGA Alpha - <a href="{% url 'mentions' %}">Mentions légales</a> - <a href="{% url 'plan' %}">Plan du site</a>
         </div>
         <!-- Copyright -->
     </footer>
